--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <relativePath />
   </parent>
   <artifactId>parallel-test-executor</artifactId>
-  <version>1.14-SNAPSHOT</version>
+  <version>${changelist}</version>
   <packaging>hpi</packaging>
   <name>Parallel Test Executor Plugin</name>
   <url>https://github.com/jenkinsci/parallel-test-executor-plugin</url>
@@ -18,6 +18,7 @@
     </license>
   </licenses>
   <properties>
+    <changelist>999999-SNAPSHOT</changelist>
     <jenkins.version>2.289.1</jenkins.version>
     <java.level>8</java.level>
   </properties>
