--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.51</version>
-    <relativePath />
+    <version>4.53</version>
+    <relativePath/>
   </parent>
   <artifactId>parallel-test-executor</artifactId>
   <version>${changelist}</version>
@@ -19,7 +19,7 @@
   </licenses>
   <properties>
     <changelist>999999-SNAPSHOT</changelist>
-    <jenkins.version>2.289.3</jenkins.version>
+    <jenkins.version>2.361.4</jenkins.version>
   </properties>
   <repositories>
     <repository>
@@ -44,8 +44,8 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.289.x</artifactId>
-        <version>1500.ve4d05cd32975</version>
+        <artifactId>bom-2.361.x</artifactId>
+        <version>1742.vb_70478c1b_25f</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>parameterized-trigger</artifactId>
-      <version>2.44</version>
+      <version>2.45</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
