--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.53</version>
+        <version>4.76</version>
         <relativePath />
     </parent>
     <artifactId>parallel-test-executor-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.361.4</jenkins.version>
+        <jenkins.version>2.387.3</jenkins.version>
     </properties>
     <name>Parallel Test Executor Demo</name>
     <repositories>
@@ -68,7 +68,6 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>config-file-provider</artifactId>
-            <version>3.9.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -90,7 +89,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>mock-slave</artifactId>
-            <version>109.vac7845f10470</version>
+            <version>125.vcfb_5c627d399</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -101,7 +100,6 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit-realtime-test-reporter</artifactId>
-            <version>82.vc2a_3f0f7a_291</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -115,8 +113,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.361.x</artifactId>
-                <version>1775.vf0577a_a_01778</version>
+                <artifactId>bom-2.387.x</artifactId>
+                <version>2543.vfb_1a_5fb_9496d</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
