--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -34,8 +34,13 @@ services:
         context: .
       ports:
         - "8080:8080"
+        - "5005:5005"
       volumes:
         - m2repo:/m2repo:rw
+      environment:
+        # TODO without this JENKINS-24752 workaround, it takes too long to provision.
+        # (Do not add hudson.model.LoadStatistics.decay=0.1; in that case we overprovision slaves which never get used, and OnceRetentionStrategy.check disconnects them after an idle timeout.)
+        - JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Dhudson.model.LoadStatistics.clock=1000 -Dhudson.Main.development=true -Dhudson.plugins.git.GitSCM.ALLOW_LOCAL_CHECKOUT=true
       healthcheck:
         test: [ "CMD", "curl", "-f", "http://localhost:8080" ]
         interval: 5s
