--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-2.462.x</artifactId>
-        <version>3334.v18e2a_2f48356</version>
+        <version>3221.ve8f7b_fdd149d</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
